fix(multiplatform): Fix buttons and align across buttons
> I agree, the centered button and text look better.
> I'd also ask for the following minor changes:
> - For mobile screens, use M-sized buttons everywhere (Hero section, Choose what to share, Try KMP)
> - For Mobile S screen, use stretchable buttons

# Conflicts:
#	blocks/multiplatform/choose-share/blocks/what/card.tsx
#	blocks/multiplatform/cta-block/cta-block.tsx
#	blocks/multiplatform/hero/index.tsx

--- a/blocks/multiplatform/choose-share/blocks/what/choose-share-what-card.module.css
+++ b/blocks/multiplatform/choose-share/blocks/what/choose-share-what-card.module.css
@@ -16,6 +16,10 @@
     @media (--ktl-ts-less) {
         border-radius: var(--ktl-box-block-l);
     }
+
+    @media (--ktl-ds-less) {
+        text-align: center;
+    }
 }
 
 .cover, .text {
@@ -60,6 +64,12 @@
 
 .text {
     margin-block: var(--ktl-box-section-s) var(--ktl-box-section-m);
+}
+
+.button {
+    @media (--ktl-ms-in) {
+        width: 100%;
+    }
 }
 
 @media (--ktl-tl-more) {
